logs/my_dag/create_table_passengers/2021-11-01T02:25:54.804369+00:00/1.log
[2021-11-01 02:25:56,115] {taskinstance.py:1035} INFO - Dependencies all met for <TaskInstance: my_dag.create_table_passengers manual__2021-11-01T02:25:54.804369+00:00 [queued]>
[2021-11-01 02:25:56,130] {taskinstance.py:1035} INFO - Dependencies all met for <TaskInstance: my_dag.create_table_passengers manual__2021-11-01T02:25:54.804369+00:00 [queued]>
[2021-11-01 02:25:56,130] {taskinstance.py:1241} INFO - 
--------------------------------------------------------------------------------
[2021-11-01 02:25:56,130] {taskinstance.py:1242} INFO - Starting attempt 1 of 1
[2021-11-01 02:25:56,130] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2021-11-01 02:25:56,140] {taskinstance.py:1262} INFO - Executing <Task(PostgresOperator): create_table_passengers> on 2021-11-01 02:25:54.804369+00:00
[2021-11-01 02:25:56,144] {standard_task_runner.py:52} INFO - Started process 2565 to run task
[2021-11-01 02:25:56,146] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'my_dag', 'create_table_passengers', 'manual__2021-11-01T02:25:54.804369+00:00', '--job-id', '93', '--raw', '--subdir', 'DAGS_FOLDER/checkModel.py', '--cfg-path', '/tmp/tmpyq1iohop', '--error-file', '/tmp/tmpd16lzszu']
[2021-11-01 02:25:56,147] {standard_task_runner.py:77} INFO - Job 93: Subtask create_table_passengers
[2021-11-01 02:25:56,175] {logging_mixin.py:109} INFO - Running <TaskInstance: my_dag.create_table_passengers manual__2021-11-01T02:25:54.804369+00:00 [running]> on host 93c37aa78767
[2021-11-01 02:25:56,216] {taskinstance.py:1429} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=my_dag
AIRFLOW_CTX_TASK_ID=create_table_passengers
AIRFLOW_CTX_EXECUTION_DATE=2021-11-01T02:25:54.804369+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-11-01T02:25:54.804369+00:00
[2021-11-01 02:25:56,223] {base.py:79} INFO - Using connection to: id: postgres_default. Host: 172.23.0.3, Port: 5432, Schema: ***, Login: ***, Password: ***, extra: {}
[2021-11-01 02:25:56,225] {dbapi.py:225} INFO - Running statement: CREATE or replace TABLE exists passengers (PassengerId int primary key, Name text, Sex text, Age float, Sibsp int, Parch int, Ticket text, Fare float, Cabin text, Embarked text);, parameters: None
[2021-11-01 02:25:56,226] {taskinstance.py:1703} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1332, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1458, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1514, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "TABLE"
LINE 1: CREATE or replace TABLE exists passengers (PassengerId int p...
                          ^

[2021-11-01 02:25:56,236] {taskinstance.py:1280} INFO - Marking task as FAILED. dag_id=my_dag, task_id=create_table_passengers, execution_date=20211101T022554, start_date=20211101T022556, end_date=20211101T022556
[2021-11-01 02:25:56,246] {standard_task_runner.py:91} ERROR - Failed to execute job 93 for task create_table_passengers
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 292, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1332, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1458, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1514, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "TABLE"
LINE 1: CREATE or replace TABLE exists passengers (PassengerId int p...
                          ^

[2021-11-01 02:25:56,278] {local_task_job.py:154} INFO - Task exited with return code 1
[2021-11-01 02:25:56,336] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
